--- a/projects/newsletter-ld/_pgbackup/index_1738508945.html
+++ b/projects/newsletter-ld/_pgbackup/index_1738508945.html
@@ -46,7 +46,8 @@
         <script src="../../js/libraries/three.min.js"></script>
     </head>
     <body class="project-single">
-        <header><a class="logo" href="http://www.aetherthemes.com/demo/scenia"></a>
+        <header>
+            <a class="logo" href="http://www.aetherthemes.com/demo/scenia"></a>
             <div class="meta name">
                 <p><small>kate</small></p>
             </div>
@@ -54,16 +55,19 @@
         <section id="ajaxpage" class="ajaxpage">
             <div class="ajaxpage__slider">
                 <ul>
-                    <li><a href="projects/newsletter-ld/newsletter-ld-full.png" target="_blank"><img border="0" src="projects/newsletter-ld/newsletter-ld-1.jpg"/></a>
+                    <li>
+                        <a href="projects/newsletter-ld/newsletter-ld-full.png" target="_blank"><img border="0" src="projects/newsletter-ld/newsletter-ld-1.jpg"/></a>
                     </li>
-                    <li><a href="projects/newsletter-ld/newsletter-ld-full.png" target="_blank"><img border="0" src="projects/newsletter-ld/newsletter-ld-2.jpg"/></a>
+                    <li>
+                        <a href="newsletter-ld-full.png" target="_blank"><img border="0" src="newsletter-ld-2.jpg"/></a>
                     </li>
                 </ul>
             </div>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Interactive Content</h4><small>Newsletter</small>
+                        <h4>Interactive Content</h4>
+                        <small>Newsletter</small>
                     </li>
                     <li>
                         <p>UI/UX</p>
@@ -76,53 +80,39 @@
                     <p><strong>Objective:</strong> Design an engaging newsletter to promote the use of interactive content, such as quizzes, to elevate user engagement.</p>
                     <p><strong>Process & Tactics:</strong></p>
                     <ul>
-                        <li>
-                            <strong>Understanding the Campaign:</strong> Gained insights into the target audience and goals of promoting interactive content.
+                        <li><strong>Understanding the Campaign:</strong> Gained insights into the target audience and goals of promoting interactive content.
                         </li>
-                        <li>
-                            <strong>Conceptualization:</strong> Brainstormed and sketched initial design concepts to effectively communicate the benefits of interactive content.
+                        <li><strong>Conceptualization:</strong> Brainstormed and sketched initial design concepts to effectively communicate the benefits of interactive content.
                         </li>
-                        <li>
-                            <strong>Design Execution:</strong> Created a visually appealing newsletter with the headline "TIP OF THE MONTH" and the message "Elevate Engagement with Interactive Content!" The main image shows a person holding a smartphone with a quiz or interactive content displayed on the screen. The question on the screen reads: "WHICH PLANET IS ALSO KNOWN AS THE RED PLANET?" with three answer options: "a. Venus," "b. Mars," and "c. Neptune." The background is blurred to emphasize the smartphone screen. The colors and overall design were set following the parameters of the brand guidelines.
+                        <li><strong>Design Execution:</strong> Created a visually appealing newsletter with the headline "TIP OF THE MONTH" and the message "Elevate Engagement with Interactive Content!" The main image shows a person holding a smartphone with a quiz or interactive content displayed on the screen. The question on the screen reads: "WHICH PLANET IS ALSO KNOWN AS THE RED PLANET?" with three answer options: "a. Venus," "b. Mars," and "c. Neptune." The background is blurred to emphasize the smartphone screen. The colors and overall design were set following the parameters of the brand guidelines.
                         </li>
-                        <li>
-                            <strong>Feedback & Refinement:</strong> Refined the newsletter to ensure it met the promotional goals and brand guidelines.
+                        <li><strong>Feedback & Refinement:</strong> Refined the newsletter to ensure it met the promotional goals and brand guidelines.
                         </li>
-                        <li>
-                            <strong>Final Delivery:</strong> Ensured the newsletter was of high quality and ready for distribution.
+                        <li><strong>Final Delivery:</strong> Ensured the newsletter was of high quality and ready for distribution.
                         </li>
                     </ul>
                     <p><strong>UI/UX Principles:</strong></p>
                     <ul>
-                        <li>
-                            <strong>Consistency:</strong> Ensured visual and functional consistency throughout the design, using the brand's colors, fonts, and styling.
+                        <li><strong>Consistency:</strong> Ensured visual and functional consistency throughout the design, using the brand's colors, fonts, and styling.
                         </li>
-                        <li>
-                            <strong>Hierarchy:</strong> Emphasized important elements such as the headline and call-to-action button using size, color, and placement.
+                        <li><strong>Hierarchy:</strong> Emphasized important elements such as the headline and call-to-action button using size, color, and placement.
                         </li>
-                        <li>
-                            <strong>Readability:</strong> Chose legible fonts and appropriate font sizes to ensure the text is easy to read.
+                        <li><strong>Readability:</strong> Chose legible fonts and appropriate font sizes to ensure the text is easy to read.
                         </li>
-                        <li>
-                            <strong>Accessibility:</strong> Ensured color contrast and clickable elements are accessible to all users.
+                        <li><strong>Accessibility:</strong> Ensured color contrast and clickable elements are accessible to all users.
                         </li>
-                        <li>
-                            <strong>Feedback:</strong> Provided visual feedback (e.g., hover effects) to enhance the user's experience.
+                        <li><strong>Feedback:</strong> Provided visual feedback (e.g., hover effects) to enhance the user's experience.
                         </li>
                     </ul>
                     <p><strong>Art Direction:</strong></p>
                     <ul>
-                        <li>
-                            <strong>Visual Appeal:</strong> Used a clean and modern design to create a professional and engaging look.
+                        <li><strong>Visual Appeal:</strong> Used a clean and modern design to create a professional and engaging look.
                         </li>
-                        <li>
-                            <strong>Color Scheme:</strong> Incorporated the brand's colors, primarily blue and white, to maintain brand consistency.
+                        <li><strong>Color Scheme:</strong> Incorporated the brand's colors, primarily blue and white, to maintain brand consistency.
                         </li>
-                        <li>
-                            <strong>Imagery:</strong> Selected high-quality images to visually represent the concept of interactive content.
+                        <li><strong>Imagery:</strong> Selected high-quality images to visually represent the concept of interactive content.
                         </li>
-                        <li>
-                            <strong>Layout:</strong> Designed a clear and structured layout to guide the user's attention and enhance readability.
+                        <li><strong>Layout:</strong> Designed a clear and structured layout to guide the user's attention and enhance readability.
                         </li>
                     </ul>
                     <p><strong>Outcome:</strong> <em>Engaging Promotion:</em> The newsletter successfully highlighted the benefits of interactive content, attracting attention and generating interest in using quizzes and other interactive elements to engage users.</p>
