--- a/projects/newsletter-ld/_pgbackup/index_1738508948.html
+++ b/projects/newsletter-ld/_pgbackup/index_1738508948.html
@@ -56,7 +56,7 @@
                 <ul>
                     <li><a href="projects/newsletter-ld/newsletter-ld-full.png" target="_blank"><img border="0" src="projects/newsletter-ld/newsletter-ld-1.jpg"/></a>
                     </li>
-                    <li><a href="projects/newsletter-ld/newsletter-ld-full.png" target="_blank"><img border="0" src="projects/newsletter-ld/newsletter-ld-2.jpg"/></a>
+                    <li><a href="newsletter-ld-full.png" target="_blank"><img border="0" src="projects/newsletter-ld/newsletter-ld-2.jpg"/></a>
                     </li>
                 </ul>
             </div>
