--- a/projects/print-aegis/_pgbackup/index_1738509022.html
+++ b/projects/print-aegis/_pgbackup/index_1738509022.html
@@ -46,7 +46,8 @@
         <script src="../../js/libraries/three.min.js"></script>
     </head>
     <body class="project-single">
-        <header><a class="logo" href="http://www.aetherthemes.com/demo/scenia"></a>
+        <header>
+            <a class="logo" href="http://www.aetherthemes.com/demo/scenia"></a>
             <div class="meta name">
                 <p><small>kate</small></p>
             </div>
@@ -54,42 +55,49 @@
         <section id="ajaxpage" class="ajaxpage">
             <div class="ajaxpage__slider">
                 <ul>
-                    <li><a href="projects/newsletter-ld/newsletter-ld-full.png" target="_blank"><img border="0" src="projects/newsletter-ld/newsletter-ld-1.jpg"/></a>
+                    <li>
+                        <a href="projects/print-aegis/print-aegis-full.jpg" target="_blank"><img border="0" src="projects/print-aegis/print-aegis.jpg"/></a>
                     </li>
-                    <li><a href="projects/newsletter-ld/newsletter-ld-full.png" target="_blank"><img border="0" src="projects/newsletter-ld/newsletter-ld-2.jpg"/></a>
+                    <li>
+                        <a href="print-aegis-2.jpeg" target="_blank"><img border="0" src="print-aegis-2.jpeg"/></a>
                     </li>
                 </ul>
             </div>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Interactive Content</h4><small>Newsletter</small>
+                        <h4>Aegis Live Concert in NYC</h4>
+                        <small>Print</small>
                     </li>
                     <li>
                         <p>UI/UX</p>
+                        <p>Print</p>
                     </li>
                     <li>
                         <p>Role<br/>Multimedia Graphic Designer</p>
                     </li>
                 </ul>
                 <div class="ajaxpage__content--description">
-                    <p><strong>Objective:</strong> Design an engaging newsletter to promote the use of interactive content, such as quizzes, to elevate user engagement.</p>
+                    <p><strong>Objective:</strong> Design an eye-catching promotional poster and print assets for the Aegis live concert in New York City, emphasizing event details, ticket information, and available packages.</p>
                     <p><strong>Process & Tactics:</strong></p>
                     <ul>
                         <li>
-                            <strong>Understanding the Campaign:</strong> Gained insights into the target audience and goals of promoting interactive content.
+                            <strong>Understanding the Event:</strong> Gained insights into the concert details, including date, time, venue, ticket prices, and available packages to incorporate them into the design.
                         </li>
                         <li>
-                            <strong>Conceptualization:</strong> Brainstormed and sketched initial design concepts to effectively communicate the benefits of interactive content.
+                            <strong>Conceptualization:</strong> Brainstormed and sketched initial design concepts featuring the band's presence and the New York City skyline to highlight the concert's location.
                         </li>
                         <li>
-                            <strong>Design Execution:</strong> Created a visually appealing newsletter with the headline "TIP OF THE MONTH" and the message "Elevate Engagement with Interactive Content!" The main image shows a person holding a smartphone with a quiz or interactive content displayed on the screen. The question on the screen reads: "WHICH PLANET IS ALSO KNOWN AS THE RED PLANET?" with three answer options: "a. Venus," "b. Mars," and "c. Neptune." The background is blurred to emphasize the smartphone screen. The colors and overall design were set following the parameters of the brand guidelines.
+                            <strong>Design Execution:</strong> Created a visually appealing poster with the band members in the background and the New York City skyline. The text includes event details such as the date (October 9, 2015, 7:30 PM), venue (BMCC Tribeca Performing Arts Center), and ticket prices ($120, $100, $80, and $30 for a meet and greet pass). Provided information on where to buy tickets in person and online, along with contact information for inquiries. Highlighted different packages available for concert attendees, such as VIP access with backstage passes. The colors and overall design were set following the parameters of the brand guidelines.
                         </li>
                         <li>
-                            <strong>Feedback & Refinement:</strong> Refined the newsletter to ensure it met the promotional goals and brand guidelines.
+                            <strong>Feedback & Refinement:</strong> Refined the poster and print assets to ensure they met the promotional goals and brand guidelines.
                         </li>
                         <li>
-                            <strong>Final Delivery:</strong> Ensured the newsletter was of high quality and ready for distribution.
+                            <strong>Final Delivery:</strong> Ensured the poster and print assets were of high quality and ready for distribution. Created additional print materials such as flyers, t-shirts, tarpaulins, pull-up banners, ballpens, and posters to enhance the concert promotion.
+                        </li>
+                        <li>
+                            <strong>Booking Website:</strong> Developed a booking website where attendees can purchase tickets and choose from different packages, including VIP packages with backstage access. Ensured the website was user-friendly and provided a seamless booking experience.
                         </li>
                     </ul>
                     <p><strong>UI/UX Principles:</strong></p>
@@ -98,16 +106,13 @@
                             <strong>Consistency:</strong> Ensured visual and functional consistency throughout the design, using the brand's colors, fonts, and styling.
                         </li>
                         <li>
-                            <strong>Hierarchy:</strong> Emphasized important elements such as the headline and call-to-action button using size, color, and placement.
+                            <strong>Hierarchy:</strong> Emphasized important elements such as the event details, ticket prices, and package information using size, color, and placement.
                         </li>
                         <li>
                             <strong>Readability:</strong> Chose legible fonts and appropriate font sizes to ensure the text is easy to read.
                         </li>
                         <li>
-                            <strong>Accessibility:</strong> Ensured color contrast and clickable elements are accessible to all users.
-                        </li>
-                        <li>
-                            <strong>Feedback:</strong> Provided visual feedback (e.g., hover effects) to enhance the user's experience.
+                            <strong>User-Friendly Booking:</strong> Developed a booking website that provided a seamless and intuitive user experience, allowing attendees to easily purchase tickets and select packages.
                         </li>
                     </ul>
                     <p><strong>Art Direction:</strong></p>
@@ -116,16 +121,16 @@
                             <strong>Visual Appeal:</strong> Used a clean and modern design to create a professional and engaging look.
                         </li>
                         <li>
-                            <strong>Color Scheme:</strong> Incorporated the brand's colors, primarily blue and white, to maintain brand consistency.
+                            <strong>Color Scheme:</strong> Incorporated the brand's colors, primarily black, white, and red, to maintain brand consistency.
                         </li>
                         <li>
-                            <strong>Imagery:</strong> Selected high-quality images to visually represent the concept of interactive content.
+                            <strong>Imagery:</strong> Selected high-quality images of the band members and the New York City skyline to visually represent the concert's location and the band's presence.
                         </li>
                         <li>
-                            <strong>Layout:</strong> Designed a clear and structured layout to guide the user's attention and enhance readability.
+                            <strong>Layout:</strong> Designed a clear and structured layout to guide the viewer's attention and enhance readability.
                         </li>
                     </ul>
-                    <p><strong>Outcome:</strong> <em>Engaging Promotion:</em> The newsletter successfully highlighted the benefits of interactive content, attracting attention and generating interest in using quizzes and other interactive elements to engage users.</p>
+                    <p><strong>Outcome:</strong> <em>Effective Promotion:</em> The poster and print assets successfully highlighted the event details, ticket information, and available packages, attracting attention and generating interest in the Aegis live concert in New York City.</p>
                 </div>
             </div>
         </section>
